--- a/Style.css
+++ b/Style.css
@@ -5,7 +5,7 @@ body
 header
 {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     margin : 2 rem;
     margin-bottom: 1.5rem;
 }
